# rlox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  codecov.yml  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/rulesets/: main.json
.github/workflows/: ci.yaml  coverage-and-audit.yaml  pr-title.yaml  release.yaml
crates/rlox/: Cargo.toml
crates/rlox-shared/: Cargo.toml
crates/rlox-shared/src/: lib.rs  scanner.rs
crates/rlox-shared/tests/: error.rs  scanner.rs  token.rs
crates/rlox-tree/: Cargo.toml
crates/rlox-tree/src/: environment.rs  interpreter.rs  lib.rs  parser.rs  resolver.rs  value.rs
crates/rlox-tree/tests/: ast.rs  environment.rs  error.rs  interpreter.rs  parser.rs  resolver.rs  run.rs  scanner.rs  token.rs
crates/rlox-vm/: Cargo.toml
crates/rlox-vm/src/: chunk.rs  compiler.rs  disassembler.rs  heap.rs  lib.rs  value.rs  vm.rs
crates/rlox-vm/tests/: run_to.rs
crates/rlox/src/: main.rs
crates/rlox/tests/: cli.rs
scripts/: smoke_test.py
scripts/smoke/: 01-arithmetic.lox  02-string-concat.lox  03-comparisons.lox  04-logical-short-circuit.lox  05-if-else.lox  06-while-loop.lox  07-for-loop.lox  08-block-scope.lox  09-fib-recursion.lox  10-make-counter-closure.lox  11-closure-capture-correctness.lox  12-clock-native.lox  13-classes-fields-methods.lox  14-classes-init.lox  15-inheritance-super.lox  20-err-runtime-undefined-variable.lox  21-err-runtime-call-non-callable.lox  22-err-runtime-arity-mismatch.lox  23-err-runtime-operand-must-be-number.lox  24-err-runtime-operands-mixed.lox  25-err-runtime-undefined-property.lox  26-err-runtime-only-instances-have-properties.lox  27-err-runtime-superclass-not-a-class.lox  30-err-compile-missing-semicolon.lox  31-err-compile-invalid-assignment-target.lox  32-err-compile-self-init.lox  33-err-compile-redeclare-local.lox  34-err-compile-top-level-return.lox  35-err-compile-this-outside-class.lox  36-err-compile-super-outside-class.lox  37-err-compile-super-no-superclass.lox  38-err-compile-return-from-init.lox  39-err-compile-self-inheritance.lox  40-err-scan-unterminated-string.lox
src/: ast.rs  callable.rs  environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  scanner.rs  token.rs  value.rs
tests/: ast.rs  cli.rs  environment.rs  error.rs  interpreter.rs  parser.rs  resolver.rs  scanner.rs  token.rs
