[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A tree-walk interpreter for the Lox language, written in Rust."
license = "MIT"
repository = "https://github.com/vancanhuit/rlox"
publish = false

[lib]
name = "rlox"
path = "src/lib.rs"

[[bin]]
name = "rlox"
path = "src/main.rs"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
