[workspace]
resolver = "3"
members = [
    "crates/rlox",
    "crates/rlox-shared",
    "crates/rlox-tree",
    "crates/rlox-vm",
]

# Per-crate Cargo build (for fast development iteration on one backend)
# is preferred; `cargo build --workspace` builds every library and the
# umbrella binary with its default features (tree-walk).
default-members = ["crates/rlox"]

[workspace.package]
version = "0.3.0-dev"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/vancanhuit/rlox"
publish = false

[workspace.dependencies]
# Internal crates
rlox-shared = { path = "crates/rlox-shared", version = "0.3.0-dev" }
rlox-tree = { path = "crates/rlox-tree", version = "0.3.0-dev" }
rlox-vm = { path = "crates/rlox-vm", version = "0.3.0-dev" }

# Third-party
clap = { version = "4.6.1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
