[package]
name = "rlox-shared"
description = "Lexer, tokens, and shared error types used by both Lox interpreter backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "rlox_shared"
path = "src/lib.rs"

[lints]
workspace = true
